# bevy_prototype_lyon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.txt  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci-cron.yml  ci.yml  dependencies.yml
examples/: all_basic_shapes.rs  balloon.rs  change_shape_example.rs  custom_output.rs  dynamic_shape.rs  dynamic_stroke_size.rs  ex.rs  multishape.rs  path.rs  paths.rs  plugin.rs  polygon.rs  readme.rs  readme_example.rs  rectangle.rs  rounded_polygon.rs  svg.rs  svg_path_shape_example.rs  trait_shape.rs  transparency.rs  ui.rs
examples/demo/: demo_camera_plugin.rs  demo_inspector_plugin.rs  demo_ui_plugin.rs  main.rs
src/: basic_shapes.rs  conversions.rs  draw.rs  entity.rs  geometry.rs  lib.rs  path.rs  plugin.rs  shape_plugin.rs  shapes.rs  utils.rs  vertex.rs
src/render/: mod.rs  shape.es.frag  shape.es.vert  shape.frag  shape.vert  shape.wgsl  shape_material.wgsl  ui_shape.vert
src/shapes/: circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rectangle.rs  svg.rs
