[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
categories = ["game-engines", "graphics", "rendering"]
description = "Draw 2D shapes and paths in the Bevy game engine."
edition = "2018"
keywords = ["game", "shapes", "gamedev", "graphics", "bevy"]
license = "MIT"
name = "bevy_prototype_lyon"
readme = "README.md"
repository = "https://github.com/Nilirad/bevy_prototype_lyon/"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5.0", default-features = false, features = ["render"]}
lyon_tessellation = "0.17"
svgtypes = "0.5"
[dev-dependencies]
bevy = {version = "0.5.0"}
