[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
categories = ["game-engines", "graphics", "rendering"]
description = "Draw 2D shapes and paths in the Bevy game engine."
edition = "2018"
keywords = ["game", "shapes", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_prototype_lyon"
readme = "README.md"
repository = "https://github.com/Nilirad/bevy_prototype_lyon/"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"]}
lyon_tessellation = "0.17"
svgtypes = "0.5"
[dev-dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
